--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -1,6 +1,11 @@
 version: 2
-python:
-    version: 3
+
+build:
+  os: ubuntu-22.04
+  tools:
+    python: "3.12"
     install:
         - requirements: docs/requirements.txt
     system_packages: true
+
+
