--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -4,9 +4,11 @@ build:
   os: ubuntu-22.04
   tools:
     python: '3.12'
+
+python:      
     install:
         - requirements: docs/requirements.txt
     system_packages: true
 
-sphinx:
-  configuration: docs/conf.py
+      #sphinx:
+      #  configuration: docs/conf.py
