--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -8,7 +8,7 @@ build:
 python:      
     install:
         - requirements: docs/requirements.txt
-    system_packages: true
+#system_packages: true
 
-      #sphinx:
-      #  configuration: docs/conf.py
+#sphinx:
+#  configuration: docs/conf.py
