--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -10,5 +10,5 @@ python:
         - requirements: docs/requirements.txt
 #system_packages: true
 
-#sphinx:
-#  configuration: docs/conf.py
+sphinx:
+  configuration: docs/conf.py
